# TypeTest

./: CMakeLists.txt  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  README.md  Result.h  States.cpp  States.h  Timer.cpp  Timer.h  TypeRacer.cpp  TypeRacer.h  Word.cpp  Word.h  WordList.h  Wpm.h  main.cpp  words.txt
FontHandling/: FontNames.h  Fonts.cpp  Fonts.h
HistoryHandling/: History.cpp  History.h  HistoryNode.h  Snapshot.cpp  Snapshot.h
ImageHandling/: Image.cpp  Image.h  ImageIcon.h
Interfaces/: EventHandler.h  GUIComponent.h  GUIComponentAdapter.cpp  GUIComponentAdapter.h  SnapshotInterface.h
Menus/: Direction.h  DropdownMenu.cpp  DropdownMenu.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  PopUpList.cpp  PopUpList.h
Static_Classes/: ColorCode.cpp  ColorCode.h  KeyboardShortcut.cpp  KeyboardShortcut.h  MouseEvent.cpp  MouseEvent.h
TextInput/: Box.cpp  Box.h  Cursor.cpp  Cursor.h  Label.cpp  Label.h  Letter.cpp  Letter.h  MultiText.cpp  MultiText.h  TextInputBox.cpp  TextInputBox.h  Typing.cpp  Typing.h
TypeTest_Components/: Result.cpp  Result.h  Timer.h  TypeRacer.h  WordList.cpp  WordList.h  Wpm.cpp  Wpm.h
